refactor product and product variant